<resources>    <string name="app_name">SAYA</string>    <string name="navigation_drawer_open">Open navigation drawer</string>    <string name="navigation_drawer_close">Close navigation drawer</string>    <string name="nav_header_title">Guest</string>    <string name="nav_header_subtitle">none</string>    <string name="nav_header_desc">Navigation header</string>    <string name="action_settings">Settings</string>    <string name="loading_dialog">Loading Please Wait...</string>    <string name="menu_home">Home</string>    <string name="menu_login">Login</string>    <string name="menu_sign_in">Sign In</string>    <string name="menu_salons">Salons</string>    <string name="menu_wallet">Wallet</string>    <string name="menu_order_status">Order Status</string>    <string name="menu_contact_us">Contact Us</string>    <string name="menu_logout">Logout</string>    <string-array name="gender_array">        <item>Male</item>        <item>Female</item>        <item>Other</item>    </string-array>    <string-array name="district_array">        <item>Indore</item>    </string-array></resources>