<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.SalonAtYourAbode.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.SalonAtYourAbode.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_sign_in"
        android:name="com.example.SalonAtYourAbode.ui.sign_in.SignInFragment"
        android:label="@string/menu_sign_in"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/nav_salon"
        android:name="com.example.SalonAtYourAbode.ui.salons.SalonFragment"
        android:label="Salon"
        tools:layout="@layout/fragment_salon" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.SalonAtYourAbode.ui.wallet.WalletFragment"
        android:label="Wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/nav_order_status"
        android:name="com.example.SalonAtYourAbode.ui.order_status.OrderStatusFragment"
        android:label="Order Status"
        tools:layout="@layout/fragment_order_status" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.SalonAtYourAbode.ui.contact_us.ContactUsFragment"
        android:label="Contact Us"
        tools:layout="@layout/fragment_contact_us"/>
</navigation>